--- a/assets/main.css
+++ b/assets/main.css
@@ -142,7 +142,6 @@ h2 {
 
 .menu-drop li:hover .box-menu {
     display: block;
-    /* transition: 1s; */
 }
 .box-menu {
     max-width: 1200px;
@@ -189,7 +188,6 @@ h2 {
 }
 .product-most .container {
     /* background-color: #0053cf; */
-    margin-left: 106px;
 }
 .product-most h3 {
     margin-top: 20px;
@@ -210,6 +208,8 @@ h2 {
     border-radius: 6px;
     overflow: hidden;
     border: 1px solid #d4d1d1;
+    /* color: rgba(0, 0, 0, 0.9); */
+    transition: all 0.2s linear;
 }
 .item img {
     width: 100%;
@@ -289,17 +289,12 @@ h6 {
     padding-top: 12px;
 }
 .service{
-    margin-top: 8px;
-    display: flex;
-    justify-content: space-between;
+    padding-top: 10px;
 }
 .service1{
-    width: 314px;
-    margin: 0 5px;
     border: 1px solid rgba(0,0,0,.125);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 .service-title{
@@ -315,7 +310,7 @@ h6 {
     font-size: 12px;
     font-weight: 500;
     margin: 0 30px;
-    margin-bottom: 15px;
+    margin-bottom: 6px;
 }
 
 
@@ -325,24 +320,17 @@ h6 {
 
 
 .footer h2 {
-    margin: 32px 0;
+  margin: 32px 0;
 }
-
 .footer {
-    background-color: #606060;
-    color: #000;
-    width: 100%;
-    display: flex;
+  background-color: #606060;
+  color: #000;
+  width: 100%;
 }
-.footer .row {
-    width: 100%;
-}
-
 .container.footer h5 {
-    /* list-style: none; */
-    font-size: 18px;
-    font-weight: 900;
-    padding-top: 36px;
+  font-size: 18px;
+  font-weight: 900;
+  padding-top: 36px;
 }
 .container.footer ul {
     list-style: none;
@@ -420,22 +408,21 @@ h6 {
     word-break: break-word;
 } */
 .infor {
-    display: flex;
-    flex-direction: column;
-  }
-  .infor h6{
-    font-weight: 600;
-    margin: 0 0;
-  }
-  
-  ul.detail-infor {
-    padding: 0;
-  }
-  ul.detail-infor li {
-    display: flex;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.infor h6{
+  font-weight: 600;
+  margin: 0 0;
+}
+ul.detail-infor {
+  padding: 0;
+}
+ul.detail-infor li {
+  display: flex;
+  align-items: center;
     /* flex-direction: row; */
-  }
+}
   
   ul.detail-infor li i {
     margin-right: 10px;
@@ -459,85 +446,64 @@ h6 {
     height: 26px;
     width: 100%;
 }
-.owl-item {
-    /* margin: 0 10px!important; */
-    /* margin-right: 0 !important; */
+
+/*slick-slider*/
+.card-slider .item:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
+  border: 1px solid #d58822;
 }
-  .owl-nav {
-    display: block !important;
-  }
-  .owl-nav .owl-next, .owl-nav .owl-prev {
-    width: 28px;
-    height: 52px;
-    border-radius: 3px;
-  }
-  .owl-nav .owl-next:hover, .owl-nav .owl-prev:hover {
-    background: #ccc !important;
-  }
-
-.owl-stage-outer {
-    margin-right: 30px !important;
-}
-/* .owl-carousel {
-background-color: #0053cf;
-} */
-/* .owl-stage-outer {
-    background-color: orange;
-} */
-.owl-carousel.row .item {
-    margin-bottom: 20px;
-    width: calc(100% - 12px);
-}
-.owl-prev {
-    position: absolute;
-    top: 50%;
-    left: -25px;
-}
-.owl-next {
-    position: absolute;
-    top: 50%;
-    right: -33px;
-}
-
-
-
-
-
-  .slick-initialized .slick-slide {
+  /* .slick-initialized .slick-slide {
     margin: 0 10px;
+  } */
+  .slick-slider button .slick-prev{
+    background: #d58822;
   }
   .slick-arrow {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    /* top: 50%; */
+    /* transform: translateY(-50%); */
     border: none;
-    width: 50px;
-    height: 50px;
+    /* width: 40px;
+    height: 50px; */
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     line-height: 1;
     z-index: 5;
-    transition: all 0.2s linear;
+    transition: all 0.3s linear;
+    background-color: #000;
   }
   .slick-arrow:hover {
-    background-color: #2cccff;
-    color: white;
+    background-color: #d58822;
+    /* color: #000; */
   }
-  .slick-prev {
-    left: 0;
+.slick-prev-icon, .slick-next-icon {
+    color: black;
   }
-  .slick-next {
-    right: 0;
+  
+  .slick-slide {
+    padding: 0 6px;
   }
-  .slick-dots {
-    display: none !important;
-  }
+  .card-slider {
+    margin: 0 auto;
+    
+    @media screen and (max-width: 1024px) {
+      width: 80%;
+    }
+    
+    .slick-prev-icon,
+    .slick-next-icon {
+      color: black;
+    }
+    
+    .slick-slide {
+      padding: 0 10px;
+    }
+    
 
 
-
-
+/* repon HUY
 @media screen and (max-width: 768px) {
     .search-box input {
         display: none;
@@ -704,4 +670,4 @@ background-color: #0053cf;
       flex: 0 0 auto;
       width: 100%;
     }
-  }
+  } */
