--- a/assets/main.css
+++ b/assets/main.css
@@ -317,15 +317,23 @@ h6 {
 
 
 
-
-
+.footer .row {
+  display: flex;
+  justify-content: center;
+}
+.trust img {
+  max-width: 132px;
+  padding-top: 10px;
+}
 .footer h2 {
-  margin: 32px 0;
+  margin: 32px 0 10px;
+}
+.footer h4 {
+  margin-bottom: 36px;
 }
 .footer {
   background-color: #606060;
   color: #000;
-  width: 100%;
 }
 .container.footer h5 {
   font-size: 18px;
@@ -333,7 +341,8 @@ h6 {
   padding-top: 36px;
 }
 .container.footer ul {
-    list-style: none;
+  list-style: none;
+  padding-left: 0;
 }
 
 .container.footer input {
@@ -351,7 +360,7 @@ h6 {
 .container.footer input:focus{
     outline: none;
 }
-.container.footer .link ul li a {
+.container.footer ul li a {
     color: #000;
     line-height: 40px;
     font-weight: 600;
@@ -408,12 +417,9 @@ h6 {
     word-break: break-word;
 } */
 .infor {
+  /* padding-top: 100px; */
   display: flex;
   flex-direction: column;
-}
-.infor h6{
-  font-weight: 600;
-  margin: 0 0;
 }
 ul.detail-infor {
   padding: 0;
@@ -423,14 +429,10 @@ ul.detail-infor li {
   align-items: center;
     /* flex-direction: row; */
 }
-  
   ul.detail-infor li i {
     margin-right: 10px;
     margin-top: 4px;
     font-size: 18px;
-  }
-  .infor p {
-    font-size: 30px;
   }
   .footer .infor p {
     font-size: 14px;
@@ -448,44 +450,26 @@ ul.detail-infor li {
 }
 
 /*slick-slider*/
+.slick-slide {
+  padding: 0 6px;
+}
 .card-slider .item:hover {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
   border: 1px solid #d58822;
 }
-  /* .slick-initialized .slick-slide {
-    margin: 0 10px;
-  } */
-  .slick-slider button .slick-prev{
-    background: #d58822;
-  }
   .slick-arrow {
-    position: absolute;
-    /* top: 50%; */
-    /* transform: translateY(-50%); */
-    border: none;
-    /* width: 40px;
-    height: 50px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    line-height: 1;
-    z-index: 5;
-    transition: all 0.3s linear;
-    background-color: #000;
+    background: #e9ecef;
+    width: 30px;
+    height: 50px;
+    border-radius: 4px;
+    transition: all 0.4s linear;
+
   }
-  .slick-arrow:hover {
-    background-color: #d58822;
-    /* color: #000; */
+  .slick-arrow:hover, .slick-arrow:focus{
+    background-color: #cccccc;
   }
-.slick-prev-icon, .slick-next-icon {
-    color: black;
-  }
-  
-  .slick-slide {
-    padding: 0 6px;
-  }
-  .card-slider {
+   
+  /*.card-slider {
     margin: 0 auto;
     
     @media screen and (max-width: 1024px) {
@@ -499,7 +483,7 @@ ul.detail-infor li {
     
     .slick-slide {
       padding: 0 10px;
-    }
+    } */
     
 
 
