--- a/assets/main.css
+++ b/assets/main.css
@@ -28,10 +28,10 @@ a {
     text-decoration: none;
 }
 .header-main {
-    width: 100%;
-    height: 70px;
-    display: flex;
-    background-color: #ddd;
+  background-color: #ddd;
+}
+.header-main.container {
+    /* height: 70px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,15 +43,9 @@ h2 {
     letter-spacing: -6px;
 }
 .logo a{
-    /* max-width: 400px; */
-    padding-left: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.search-box {
-    width: 30%;
-    margin-left: -90px !important;
 }
 .search-box button {
     margin-left: -30px;
@@ -71,15 +65,16 @@ h2 {
 .search-box {
     display: flex;
     justify-content: center;
+    /* width: 90%; */
+    /* margin-left: -90px !important; */
 }
 .person {
-    padding-right: 70px;
     display: flex;
     align-items: center;
 }
 .person a {
     color: #000;
-
+    margin-right: 40px;
 }
 .cart {
     position: relative;
@@ -87,26 +82,14 @@ h2 {
 }
 .number-cart {
     position: absolute;
-    right: -10px;
-    top: -16px;
+    right: -20px;
+    top: -14px;
     font-size: 11px;
     font-weight: bold;
     padding: 3px 8px;
     background-color: #606060;
     border-radius: 50%;
     color: white;
-}
-.fas {
-    padding-right: 8px;
-}
-.user {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-.person a {
-    margin-right: 30px;
-    
 }
 .user, .cart {
     /* display: block; */
@@ -118,28 +101,27 @@ h2 {
 .bars {
     display: none;
 }
-.menu-drop {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 50px;
-    background-color:#cccccc;
-    list-style: none;
-    color: #000;
-    padding-right: 260px;
-    padding-left: 260px;
-    margin-bottom: 0;
-    position: sticky;
-    z-index: 99;
-    top: -1px;
-    left: 0;
-    box-shadow:0px 2px 5px rgba(0, 0, 0, 0.4);
 
+.menu {
+  background-color: #cccccc;
+  position: sticky;
+  top: -1px;
+  left: 0;
+  box-shadow:0px 2px 5px rgba(0, 0, 0, 0.4);
+  z-index: 99;
+}
+.menu-drop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin-bottom: 0;
+  height: 50px;
+  padding: 0 200px;
 }
 .menu-drop li {
     position: relative;
 }
-
 .menu-drop li:hover .box-menu {
     display: block;
 }
@@ -161,7 +143,6 @@ h2 {
 .menu-drop li a {
     color: #000;
     font-weight: 700;
-    line-height: 50px;
 }
 .menu-drop i {
     margin-left: 4px;
@@ -185,9 +166,6 @@ h2 {
 }
 .box-menu li a:hover {
     color: #000;
-}
-.product-most .container {
-    /* background-color: #0053cf; */
 }
 .product-most h3 {
     margin-top: 20px;
@@ -398,9 +376,6 @@ h6 {
 .footer .infor h5 {
     line-height: 34px;
     padding: 0;
-}
-.footer .bottom img {
-    max-width: 132px;
 }
 .footer .pay {
     margin-top: 20px;
