--- a/assets/main.css
+++ b/assets/main.css
@@ -462,7 +462,7 @@ ul.detail-infor li {
     
 
 
-/* repon HUY
+/* repon 
 @media screen and (max-width: 768px) {
     .search-box input {
         display: none;
