--- a/assets/main.css
+++ b/assets/main.css
@@ -1,105 +1,126 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
+
 body {
-    font-family: 'Quicksand', sans-serif;
-    /* background-color: #a5a5a5; */
-    position: relative;
+  font-family: 'Quicksand', sans-serif;
+  /* background-color: #a5a5a5; */
+  position: relative;
 }
+
 .header {
-    width: 100%;
-    background-color: #97b9db;
-    /* position: sticky;
+  width: 100%;
+  background-color: #97b9db;
+  /* position: sticky;
     z-index: 99;
     top: 0;
     left: 0; */
-    /* box-shadow: 0 23px 38px 0 rgb(0 0 0 / 10%); */
+  /* box-shadow: 0 23px 38px 0 rgb(0 0 0 / 10%); */
 }
+
 .header-top {
-    height: 24px;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-right: 80px;
+  height: 24px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 80px;
 }
+
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 .header-main {
   background-color: #ddd;
 }
+
 .header-main.container {
-    /* height: 70px; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  /* height: 70px; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 h2 {
-    color: #00007C;
-    font-weight: 900;
-    font-size: 60px;
-    letter-spacing: -6px;
+  color: #00007C;
+  font-weight: 900;
+  font-size: 60px;
+  letter-spacing: -6px;
 }
-.logo a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.logo a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .search-box button {
-    margin-left: -30px;
-    border: none;
-    background-color: transparent;
-    font-size: 19px;
-    cursor: pointer;
+  margin-left: -30px;
+  border: none;
+  background-color: transparent;
+  font-size: 19px;
+  cursor: pointer;
 }
+
 .search-type {
-    padding: 10px 18px;
-    border-radius: 20px;
-    border: 1px solid #606060;
-    font-size: 14px;
-    font-weight: 600;
-    outline: none;
+  padding: 10px 18px;
+  border-radius: 20px;
+  border: 1px solid #606060;
+  font-size: 14px;
+  font-weight: 600;
+  outline: none;
 }
+
 .search-box {
-    display: flex;
-    justify-content: center;
-    /* width: 90%; */
-    /* margin-left: -90px !important; */
+  display: flex;
+  justify-content: center;
+  /* width: 90%; */
+  /* margin-left: -90px !important; */
 }
+
 .person {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
 .person a {
-    color: #000;
-    margin-right: 40px;
+  color: #000;
+  margin-right: 40px;
 }
+
 .cart {
-    position: relative;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
+
 .number-cart {
-    position: absolute;
-    right: -20px;
-    top: -14px;
-    font-size: 11px;
-    font-weight: bold;
-    padding: 3px 8px;
-    background-color: #606060;
-    border-radius: 50%;
-    color: white;
+  position: absolute;
+  right: -20px;
+  top: -14px;
+  font-size: 11px;
+  font-weight: bold;
+  padding: 3px 8px;
+  background-color: #606060;
+  border-radius: 50%;
+  color: white;
 }
-.user, .cart {
-    /* display: block; */
-    font-size: 20px;
+
+.user,
+.cart {
+  /* display: block; */
+  font-size: 20px;
 }
-.user:hover, .cart:hover, .search-box .button:hover {
-    color: #0053cf;
+
+.user:hover,
+.cart:hover,
+.search-box .button:hover {
+  color: #0053cf;
 }
+
 .bars {
-    display: none;
+  display: none;
 }
 
 
@@ -110,9 +131,10 @@ h2 {
   position: sticky;
   top: -1px;
   left: 0;
-  box-shadow:0px 2px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
   z-index: 99;
 }
+
 .menu-drop {
   display: flex;
   justify-content: space-between;
@@ -122,53 +144,63 @@ h2 {
   height: 50px;
   padding: 0 200px;
 }
+
 .menu-drop li {
-    position: relative;
+  position: relative;
 }
+
 .menu-drop li:hover .box-menu {
-    display: block;
+  display: block;
 }
+
 .box-menu {
-    max-width: 1200px;
-    width: 180px;
-    list-style: none;
-    /* display: flex; */
-    position: absolute;
-    background-color: #bbb5b5;
-    display: table;
-    padding-left: 0px;
-    margin-left: 20px;
-    cursor: pointer;
-    display: none;
-    box-shadow:0px 2px 5px rgba(0, 0, 0, 0.4);
-    z-index: 99;
+  max-width: 1200px;
+  width: 180px;
+  list-style: none;
+  /* display: flex; */
+  position: absolute;
+  background-color: #bbb5b5;
+  display: table;
+  padding-left: 0px;
+  margin-left: 20px;
+  cursor: pointer;
+  display: none;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+  z-index: 99;
 }
+
 .menu-drop li a {
-    color: #000;
-    font-weight: 700;
+  color: #000;
+  font-weight: 700;
 }
+
 .menu-drop i {
-    margin-left: 4px;
-    font-size: small;
+  margin-left: 4px;
+  font-size: small;
 }
+
 .box-menu li a {
-    text-decoration: none;
-    font-weight: 500;
-    line-height: 36px;
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 36px;
 }
+
 .box-menu li {
-    padding-left: 30px;
+  padding-left: 30px;
 }
+
 .box-menu li:hover {
-    background-color: #B8C85F;
-    padding-left: 40px;
-    transition: 0.5s;
+  background-color: #B8C85F;
+  padding-left: 40px;
+  transition: 0.5s;
 }
+
 .menu-drop li a:hover {
   color: #0053cf;
 }
+
 .box-menu li a:hover {
-    color: #000;
+  color: #000;
 }
 
 
@@ -179,29 +211,37 @@ h2 {
   padding: 2px 16px;
   font-weight: 600;
 }
+
 .btn-slide:hover {
   background: #d58822;
 }
+
 .carousel-indicators button:hover {
   background-color: #d58822;
 }
+
 .carousel-item h5 {
   font-size: 58px;
   font-weight: 600;
   color: #000;
   display: block;
 }
+
 .carousel-item p {
   color: #000;
   font-size: 18px;
   font-weight: 600;
 }
-.carousel-item img {
+
+.banner .carousel-item img {
   opacity: .6;
 }
-.carousel-control-prev, .carousel-control-next {
+
+.carousel-control-prev,
+.carousel-control-next {
   display: none;
 }
+
 .carousel-caption {
   margin-bottom: 60px;
 }
@@ -212,15 +252,18 @@ h2 {
   color: #d58822;
   padding-top: 12px;
 }
-.service{
+
+.service {
   padding-top: 10px;
 }
+
 .service1 {
-  border: 1px solid rgba(0,0,0,.125);
+  border: 1px solid rgba(0, 0, 0, .125);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .service-title {
   font-size: 20px;
   font-weight: bold;
@@ -230,6 +273,7 @@ h2 {
   color: black;
   border-bottom: 1px ridge;
 }
+
 .service-text {
   font-size: 12px;
   font-weight: 500;
@@ -241,66 +285,114 @@ h2 {
 
 /* PRODUCT*/
 .product-most h3 {
-    margin-top: 20px;
-    height: 52px;
-    font-weight: 900;
-    color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  margin: 40px 0 16px;
+  /* height: 52px; */
+  /* font-weight: 900; */
+  /* color: #000; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* position: relative; */
 }
 
 .item {
-    /* position: relative; */
-    height: 450px;
-    background-color: #e9ecef;
-    text-align: center;
-    border-radius: 6px;
-    overflow: hidden;
-    border: 1px solid #d4d1d1;
-    /* color: rgba(0, 0, 0, 0.9); */
-    transition: all 0.2s linear;
+  /* position: relative; */
+  height: 450px;
+  background-color: #e9ecef;
+  text-align: center;
+  border-radius: 6px;
+  overflow: hidden;
+  border: 1px solid #d4d1d1;
+  color: #000;
+  transition: all 0.2s linear;
 }
-.item img {
-    width: 100%;
-    height: 240px;
+.item:hover {
+  cursor: pointer;
 }
-h6 {
-    font-size: 20px;
-    font-weight: 900;
-    margin-top: 20px;
-    line-height: 24px;
+.item a h6 {
+  color: #000;
 }
-.pro-price {
-    font-size: 20px;
-    font-weight: 1000;
-    margin: 20px 0;
-    color: #f14346;
-}
-.pro-rating {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-}
-.pro-rating i {
-    color: #f6bc3e;
-}
-.pro-rating .rating-num {
-    margin-left: 8px;
-}
-.add-cart button {
-    background-color: #0053cf;
-    border: none;
-    border-radius: 4px;
-    line-height: 42px;
-    padding: 0 32px;
-    color: #fff;
-    font-weight: 600;
-    margin-top: 22px;
+.item:hover h6 {
+  color: #d58822;
+  transition: 0.3s;
 }
 
+.item img {
+  width: 100%;
+  height: 240px;
+}
+
+h6 {
+  font-size: 20px;
+  font-weight: 900;
+  margin-top: 20px;
+  line-height: 24px;
+}
+
+.pro-price {
+  font-size: 20px;
+  font-weight: 1000;
+  margin: 20px 0;
+  color: #f14346;
+}
+
+.pro-rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+}
+
+.pro-rating i {
+  color: #f6bc3e;
+}
+
+.pro-rating .rating-num {
+  margin-left: 8px;
+}
+
+.add-cart button {
+  background-color: #0058dd;
+  border: none;
+  border-radius: 6px;
+  line-height: 42px;
+  padding: 0 30px;
+  color: #fff;
+  font-weight: 600;
+  margin-top: 22px;
+}
+.add-cart button:hover {
+  background-color: #004ab9;
+  transition: 0.4s;
+}
+.about h3 {
+  margin: 40px 0 16px;
+}
+.about .container {
+  background-image: url(./image/bg.jpg);
+/*  */
+}
+.about .row {
+  background-image: url(./image/bg.jpg);
+  /* background-color: #606060; */
+  padding: 30px 0;
+}
+.about .carousel-indicators {
+  margin-bottom: -20px;
+  opacity: .2;
+}
+.about .left {
+  border: 4px solid orange;
+  border-radius: 12px;
+  padding: 20px 60px 10px 60px;
+  margin: 50px;
+}
+.about h4 {
+  margin-bottom: 20px;
+}
+.about .comment {
+  font-size: 16px;
+}
 
 
 
@@ -308,152 +400,177 @@ h6 {
   display: flex;
   justify-content: center;
 }
+
 .trust img {
   max-width: 132px;
   padding-top: 10px;
 }
+
 .footer h2 {
   margin: 32px 0 10px;
+  color: #005eec
 }
+
 .footer h4 {
   margin-bottom: 36px;
 }
+
 .footer {
-  background-color: #606060;
-  color: #000;
+  background-color: #303030;
+  color: #ebebeb;
 }
+
 .container.footer h5 {
   font-size: 18px;
   font-weight: 900;
   padding-top: 36px;
 }
+
 .container.footer ul {
   list-style: none;
   padding-left: 0;
 }
 
 .container.footer input {
-    width: 220px;
-    font-size: 14px;
-    font-weight: 700;
-    border-radius: 4px 0 0 4px;
-    line-height: 38px;
-    border: none;
-    padding-left: 5px;
-    margin-bottom: 30px;
-    position: relative;
-    color: #000;
+  width: 220px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 4px 0 0 4px;
+  line-height: 38px;
+  border: none;
+  padding-left: 5px;
+  margin-bottom: 30px;
+  position: relative;
+  color: #000;
 }
-.container.footer input:focus{
-    outline: none;
+
+.container.footer input:focus {
+  outline: none;
 }
+
 .container.footer ul li a {
-    color: #000;
-    line-height: 40px;
-    font-weight: 600;
+  color: #ebebeb;
+  line-height: 40px;
+  font-weight: 600;
 }
+
 .container.footer ul li a:hover {
-    text-decoration: underline;
-    color: #d58822;
+  text-decoration: underline;
+  color: #d58822;
 }
-.detail-infor a{
-    color: #000;
+
+.detail-infor a {
+  color: #000;
 }
+
 .footer button {
-    background-color: #9b9b9b;
-    border: none;
-    border-radius: 0 4px 4px 0;
-    width: 40px;
-    height: 38px;
-    position: absolute;
+  background-color: #9b9b9b;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  width: 40px;
+  height: 38px;
+  position: absolute;
 }
+
 .footer button i {
-    color: #000;
+  color: #000;
 }
+
 .footer button:hover {
-    background: #d58822;
+  background: #d58822;
 }
+
 .follow a {
-    color: #303030;
-    margin-right: 12px;
-    font-size: 28px;
+  color: #bbb5b5;
+  margin-right: 12px;
+  font-size: 28px;
 }
+
 .footer h5 {
-    /* color: #000; */
-    line-height: 50px;
+  line-height: 50px;
 }
+
 .footer .infor h5 {
-    line-height: 34px;
-    padding: 0;
+  line-height: 34px;
+  padding: 0;
 }
+
 .footer .pay {
-    margin-top: 20px;
+  margin-top: 20px;
 }
+
 .footer .pay img {
-    width: 42px;
-    height: 28px;
+  width: 42px;
+  height: 28px;
 }
+
 .footer span {
-    display: block;
-    font-weight: 600;
+  display: block;
+  font-weight: 600;
 }
-/* h1 {
-    word-break: break-word;
-} */
+
 .infor {
   /* padding-top: 100px; */
   display: flex;
   flex-direction: column;
 }
+
 ul.detail-infor {
   padding: 0;
 }
+
 ul.detail-infor li {
   display: flex;
   align-items: center;
-    /* flex-direction: row; */
-}
-  ul.detail-infor li i {
-    margin-right: 10px;
-    margin-top: 4px;
-    font-size: 18px;
-  }
-  .footer .infor p {
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 600;
-    margin: 10px 0 5px 0;
-}
-.footer-bottom {
-    background: #000;
-    color: #fff;
-    text-align: center;
-    margin: 0 auto;
-    height: 26px;
-    width: 100%;
+  /* flex-direction: row; */
 }
 
-/*slick-slider*/
+ul.detail-infor li i {
+  margin-right: 10px;
+  margin-top: 4px;
+  font-size: 18px;
+}
+
+.footer .infor p {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 600;
+  margin: 10px 0 5px 0;
+}
+
+.footer-bottom {
+  background: #000;
+  text-align: center;
+  margin: 0 auto;
+  height: 26px;
+  width: 100%;
+}
+
+/*slick-slider item*/
 .slick-slide {
   padding: 0 6px;
 }
+
 .card-slider .item:hover {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
   border: 1px solid #d58822;
 }
-  .slick-arrow {
-    background: #e9ecef;
-    width: 30px;
-    height: 50px;
-    border-radius: 4px;
-    transition: all 0.4s linear;
 
-  }
-  .slick-arrow:hover, .slick-arrow:focus{
-    background-color: #cccccc;
-  }
-   
-  /*.card-slider {
+.slick-arrow {
+  background: #e9ecef;
+  width: 30px;
+  height: 50px;
+  border-radius: 4px;
+  transition: all 0.4s linear;
+
+}
+
+.slick-arrow:hover,
+.slick-arrow:focus {
+  background-color: #cccccc;
+}
+
+/* .card-slider {
     margin: 0 auto;
     
     @media screen and (max-width: 1024px) {
@@ -468,7 +585,7 @@ ul.detail-infor li {
     .slick-slide {
       padding: 0 10px;
     } */
-    
+
 
 
 /* repon 
