--- a/assets/main.css
+++ b/assets/main.css
@@ -5,13 +5,11 @@
 
 body {
   font-family: 'Quicksand', sans-serif;
-  /* background-color: #a5a5a5; */
   position: relative;
 }
 
 .header {
-  width: 100%;
-  background-color: #97b9db;
+  /* width: 100%; */
   /* position: sticky;
     z-index: 99;
     top: 0;
@@ -19,14 +17,6 @@ body {
   /* box-shadow: 0 23px 38px 0 rgb(0 0 0 / 10%); */
 }
 
-.header-top {
-  height: 24px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 80px;
-}
 
 a {
   text-decoration: none;
@@ -36,7 +26,7 @@ a {
   background-color: #ddd;
 }
 
-.header-main.container {
+.header-main .container {
   /* height: 70px; */
   display: flex;
   justify-content: space-between;
@@ -48,6 +38,7 @@ h2 {
   font-weight: 900;
   font-size: 60px;
   letter-spacing: -6px;
+  margin-bottom: 0;
 }
 
 .logo a {
@@ -81,8 +72,10 @@ h2 {
 }
 
 .person {
+  width: 15%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .person a {
@@ -119,10 +112,62 @@ h2 {
   color: #0053cf;
 }
 
-.bars {
+.header span {
   display: none;
 }
+.search-icon {
+  display: none;
+}
+.sidenav {
+  height: 100%;
+  width: 0px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  /* display: none; */
+}
 
+.sidenav a {
+  padding: 8px 8px 8px 22px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #d58822;
+  background-color: #303030;
+}
+.sidenav i {
+  padding-right: 12px;
+}
+.sidenav p {
+  padding-top: 100px;
+  color: #606060;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+#mySearch {
+  width: 100%;
+  outline: none;
+  margin: 60px 0 16px;
+  font-size: 18px;
+  padding: 11px;
+  border: 1px solid #ddd;
+}
 
 
 /* MENU */
@@ -285,18 +330,9 @@ h2 {
 
 /* PRODUCT*/
 .product-most h3 {
-  margin: 40px 0 16px;
-  /* height: 52px; */
-  /* font-weight: 900; */
-  /* color: #000; */
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* position: relative; */
+  margin: 40px 0 18px;
 }
-
 .item {
-  /* position: relative; */
   height: 450px;
   background-color: #e9ecef;
   text-align: center;
@@ -368,13 +404,8 @@ h6 {
 .about h3 {
   margin: 40px 0 16px;
 }
-.about .container {
-  background-image: url(./image/bg.jpg);
-/*  */
-}
 .about .row {
   background-image: url(./image/bg.jpg);
-  /* background-color: #606060; */
   padding: 30px 0;
 }
 .about .carousel-indicators {
@@ -384,8 +415,10 @@ h6 {
 .about .left {
   border: 4px solid orange;
   border-radius: 12px;
-  padding: 20px 60px 10px 60px;
-  margin: 50px;
+  padding: 20px 0 10px;
+  width: 70%;
+  margin: 20px auto;
+  background-color:rgba(42, 42, 42, 0.4);
 }
 .about h4 {
   margin-bottom: 20px;
@@ -394,16 +427,13 @@ h6 {
   font-size: 16px;
 }
 
-
-
 .footer .row {
   display: flex;
   justify-content: center;
 }
 
 .trust img {
-  max-width: 132px;
-  padding-top: 10px;
+  max-width: 140px;
 }
 
 .footer h2 {
@@ -432,7 +462,7 @@ h6 {
 }
 
 .container.footer input {
-  width: 220px;
+  width: 200px;
   font-size: 14px;
   font-weight: 700;
   border-radius: 4px 0 0 4px;
@@ -498,10 +528,16 @@ h6 {
 .footer .pay {
   margin-top: 20px;
 }
+.footer .pay div {
+  display: flex;
+  /* justify-content: center; */
+  padding-top: 8px;
+}
 
 .footer .pay img {
-  width: 42px;
+  width: 44px;
   height: 28px;
+  margin-right: 2px;
 }
 
 .footer span {
@@ -539,9 +575,7 @@ ul.detail-infor li i {
 }
 
 .footer-bottom {
-  background: #000;
-  text-align: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   height: 26px;
   width: 100%;
 }
