--- a/assets/main.css
+++ b/assets/main.css
@@ -129,7 +129,7 @@ h2 {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  /* display: none; */
+  display: none;
 }
 
 .sidenav a {
