--- a/assets/main.css
+++ b/assets/main.css
@@ -32,7 +32,7 @@ a {
 }
 
 h2 {
-  color: #00007C;
+  color: #00327d;
   font-weight: 900;
   font-size: 60px;
   letter-spacing: -6px;
@@ -115,15 +115,18 @@ h2 {
 }
 .sidenav {
   height: 100%;
-  width: 0px;
+  width: 0;
   position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
   background-color: #000;
-  overflow-x: hidden;
-  transition: 0.5s;
-  /* padding-top: 60px; */
+  overflow: hidden;
+  /* transform: translateX(0); */
+  transition: 0.5s ease-out;
+}
+.menu-mb {
+  width: 250px;
 }
 
 .sidenav a {
@@ -132,7 +135,7 @@ h2 {
   font-size: 18px;
   color: #818181;
   display: block;
-  transition: 0.3s;
+  /* transition: 0.3s; */
 }
 .sidenav a i {
   margin-right: 12px;
@@ -143,20 +146,26 @@ h2 {
   background-color: #303030;
 }
 .sidenav .search-icon {
-  margin-left: -30px;
-  margin-top: 45px;
+  margin-left: -46px;
+  margin-top: 46px;
   font-size: 28px;
+}
+.sidenav .search-icon i:hover {
+  color: #d58822;
 }
 .sidenav p {
   padding-top: 100px;
   color: #606060;
 }
-
+.sidenav .closebtn:hover {
+  background-color: transparent;
+}
 .sidenav .closebtn {
   position: absolute;
   top: 0;
   right: 20px;
   font-size: 36px;
+  padding: 0;
 }
 #mySearch {
   width: 100%;
@@ -164,6 +173,7 @@ h2 {
   margin: 60px 0 16px;
   font-size: 18px;
   padding: 8px;
+  border: 0;
 }
 
 /* .bar1, .bar2, .bar3 {
