--- a/assets/reponsive.css
+++ b/assets/reponsive.css
@@ -3,7 +3,7 @@
         width: 20%;
     }
     .logo h2 {
-        font-size: 42px;
+        font-size: 50px;
         letter-spacing: -4px
     }
     .person {
@@ -28,9 +28,6 @@
     .carousel-item h5 {
         font-size: 32px;
     }
-    .carousel-indicators {
-        display: none;
-    }
     .about .left {
         width: 50%;
         margin: 0 auto 40px;
@@ -44,7 +41,7 @@
 
 
 @media screen and (max-width:768px) {
-    .header, .sidenav {
+    .sidenav {
         display: block;
     }
     .repon {
@@ -54,11 +51,14 @@
     .logo {
         order: 2;
     }
-    .logo h2 {
-        font-size: 34px;
-    }
     .person {
         order: 3;
+    }
+    .logo h2 {
+        font-size: 46px;
+    }
+    .user, .cart {
+        font-size: 16px;
     }
     .header {
         position: sticky;
@@ -80,9 +80,12 @@
     .banner .carousel-caption {
         padding: 0px;
     }
-    .carousel-item .btn-slide {
-        font-size: 12px;
-        padding: 1px 8px;
+    .banner .carousel-item .btn-slide {
+        font-size: 14px;
+        padding: 2px 10px;
+    }
+    .banner .carousel-indicators {
+        display: none;
     }
     .search, .menu, .slick-prev, .slick-next, .slick-arrow {
         display: none !important;
@@ -90,9 +93,9 @@
     /* .service1 {
         width: 25%;
     } */
-    .service-title {
+    /* .service-title {
         font-size: 12px;
-    }
+    } */
     /* .service .row {
         height: 30%;
     } */
@@ -121,12 +124,10 @@
     .header .logo {
         /* height: 50px; */
     }
-    .header .repon {
+    .header .repon, .header .person {
         width: 25%;
     }
-    .header .person {
-        width: 25%;
-    }.header .person a {
+    .header .person a {
         margin-right: 14px;
     }
     .banner .carousel-item {
@@ -144,9 +145,13 @@
         margin-bottom: 0;
         display: none;
     }
+    .banner .carousel-item .btn-slide {
+        font-size: 12px;
+        padding: 2px 10px;
+    }
     
     .right .carousel-item p {
-        display: block;
+        /* display: block; */
     }
     .about .left {
         width: 60%;
