--- a/assets/reponsive.css
+++ b/assets/reponsive.css
@@ -1,9 +1,9 @@
 @media screen and (max-width:1200px) {
-    .logo {
+    .header .logo {
         width: 20%;
     }
-    .logo h2 {
-        font-size: 50px;
+    .header .logo h2 {
+        /* font-size: 50px; */
         letter-spacing: -4px
     }
     .person {
@@ -55,7 +55,7 @@
         order: 1;
         display: block;
     }
-    .logo {
+    .header .logo {
         order: 2;
     }
     .person {
