--- a/assets/reponsive.css
+++ b/assets/reponsive.css
@@ -2,8 +2,7 @@
     .header .logo {
         width: 20%;
     }
-    .header .logo h2 {
-        /* font-size: 50px; */
+    .logo h2 {
         letter-spacing: -4px
     }
     .person {
@@ -106,16 +105,6 @@
         font-size: 16px;
         /* line-height: 1.7; */
     }
-    /* .service1 {
-        width: 25%;
-    } */
-    /* .service-title {
-        font-size: 12px;
-    } */
-    /* .service .row {
-        height: 30%;
-    } */
-
     .list-unstyled, .footer {
         text-align: center;
     }
