--- a/assets/present.css
+++ b/assets/present.css
@@ -5,12 +5,9 @@
     line-height: 40px;
 }
 .cart-page {
-    background-image: url(./image/slide1.png);
-    opacity: 0.8;
-    position: relative;
-}
-.cart-page h6 {
-    position: absolute;
+    /* background-image: url(./image/slide1.png); */
+    /* opacity: 0.8; */
+    /* height: 100px; */
 }
 @media screen and (max-width: 576px) {
     .title-list ul li {
