--- a/assets/cart.css
+++ b/assets/cart.css
@@ -105,7 +105,12 @@ tfoot {
 .cart-item-actions {
   padding: 0 10px;
 }
-
+/* .all {
+  position: absolute;
+}
+td .total-price {
+  position: relative;
+} */
 
 
 @media screen and (max-width:1200px) {
