--- a/assets/main.css
+++ b/assets/main.css
@@ -9,11 +9,11 @@ body {
 }
 
 .header {
-  /* position: sticky;
-    z-index: 99;
+  position: sticky;
+    z-index: 990;
     top: 0;
-    left: 0; */
-  /* box-shadow: 0 23px 38px 0 rgb(0 0 0 / 10%); */
+    left: 0;
+  box-shadow: 0 23px 38px 0 rgb(0 0 0 / 20%);
 }
 .success-message {
   position: fixed;
@@ -218,11 +218,16 @@ a {
                         /* MENU */
 .menu {
   background-color: #cccccc;
-  position: sticky;
-  top: -1px;
+  /* top: -1px; */
+  top: 0px;
   left: 0;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
   z-index: 99;
+  transition: 0.2s;
+}
+.menu-sticky {
+  top: 72px;
+  position: sticky;
 }
 
 .menu-drop {
