--- a/assets/detailproduct.css
+++ b/assets/detailproduct.css
@@ -1,7 +1,7 @@
 .bg-body-tertiary {
     border-radius: 8px;
 }
-.color {
+/* .color {
     line-height: 52px;
 }
 .color div {
@@ -25,11 +25,16 @@
 }
 .r {
     background-color: brown;
+} */
+span.quantity {
+    width: 36px;
+    text-align: center;
+
 }
-.detailpro .addcart, .buynow {
+.detailpro .addToCartButton, .buynow {
     border: none;
 }
-.detailpro .addcart {
+.detailpro .addToCartButton {
     background-color: #0058dd;
     color: white;
     line-height: 42px;
@@ -45,6 +50,9 @@
     padding: 0 40px;
     border-radius: 6px;
     font-weight: 600;
+}
+.buynow a {
+    color: #fff !important;
 }
 .detailpro .product-quantity {
     line-height: 32px;
@@ -67,12 +75,12 @@
 p.social i:hover {
     cursor: pointer;
 }
-.color div {
-    /* padding: 8px; */
+.infor-pro .name {
+    margin: 0 auto;
 }
-/* button.active {
-    background-color: aquamarine;
-} */
+.imgpro-top.productimg {
+    text-align: center;
+}
 @media screen and (max-width:1200px) {
     .bg-body-terticary {
         padding: 0 !important;
@@ -82,12 +90,124 @@ p.social i:hover {
     p.social {
         font-size: 14px;
     }
-    .rating-num {
-        display: none;
+    .containerad {
+        padding-top: 26px !important;
     }
 }
 @media screen and (max-width:768px) {
-    .rating-num {
+    /* .rating-num {
         display: block;
+    } */
+}
+@media screen and (max-width: 576px) {
+    .detailpro .btn-down, .detailpro .btn-up {
+        padding: 2px 10px;
     }
+    .infor-pro .pri h6 {
+        display: none !important;
+    }
+    #bigimg {
+        height: 300px;
+    }
+    .imgpro-bottom div img {
+        height: 60px;
+    }
+    button.nav-link {
+        padding: 4px 10px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .rating-num {
+        display: none;
+    }
+    .justify-content-evenly button.buynow {
+        line-height: 40px;
+        padding: 0 26px;
+        /* font-size: 16px; */
+    }
+    .justify-content-evenly button.addToCartButton {
+        padding: 0 6px;
+    }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .infor-pro .pri {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    .infor-pro h4 {
+        font-size: 20px;
+    }
+    .infor-pro h6 {
+        font-size: 14px;
+    }
+    .infor-pro h5 {
+        font-size: 18px;
+    }
+    .infor-pro .pro-rating {
+        font-size: 12px;
+    }
+    .infor-pro .rating-num {
+        margin-left: 4px;
+    }
+    .rating-num {
+        display: none;
+    }
+    #bigimg {
+        height: 320px;
+    }
+    .imgpro-bottom div img {
+        height: 66px;
+    }
+}
+.product-nav label{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 0 0.1em #fff,
+                0.5em 0.5em 1em -0.15em rgba(0, 0, 0, 0.25);
+    transition: 200ms all ease-in-out;
+    margin-left: 24px;
+}
+
+.product-nav label + label{
+    margin-left: 2em;
+}
+
+.product-nav label:nth-of-type(1), 
+#color-1:checked ~ .productimg::after{
+    background-color: hsl(30, 79%, 40%);
+}
+.product-nav label:nth-of-type(2), 
+#color-2:checked ~ .productimg::after{
+    background-color: hsl(0, 0%, 73%);
+}
+.product-nav label:nth-of-type(3),
+#color-3:checked ~ .productimg::after{
+    background-color: hsl(9, 100%, 23%);
+}
+
+
+#color-1:checked ~ .product-nav > label:nth-of-type(1), 
+#color-2:checked ~ .product-nav > label:nth-of-type(2),
+#color-3:checked ~ .product-nav > label:nth-of-type(3){
+    transform: scale(1.3);
+    box-shadow: 0 0 0 0.1em rebeccapurple;
+}
+
+#color-1:checked ~ .product-nav > label:nth-of-type(1){
+    background-color: chocolate;
+}
+#color-2:checked ~ .product-nav > label:nth-of-type(2){
+    background-color: darkgray;
+}
+#color-3:checked ~ .product-nav > label:nth-of-type(3){
+    background-color: rgb(113, 0, 0);
+}
+p.comment {
+    text-indent: 86px;
+}
+#nav-home p {
+    text-indent: 50px;
 }
