--- a/assets/reponsive.css
+++ b/assets/reponsive.css
@@ -22,6 +22,13 @@
     .carousel-item h5 {
         font-size: 40px;
     }
+    .menu-sticky {
+        top: 59px;
+        align-items: center;
+    }
+    ul.menu-drop {
+        height: 44px;
+    }
 }
 
 
@@ -46,6 +53,12 @@
     }
     .service-title {
         font-size: 16px;
+    }
+    .menu-sticky {
+        top: 48px;
+    }
+    .search input {
+        margin-left: -60px;
     }
 }
 
@@ -109,7 +122,6 @@
     }
     .service-title {
         font-size: 16px;
-        /* line-height: 1.7; */
     }
     .list-unstyled, .footer {
         text-align: center;
@@ -123,6 +135,9 @@
     .footer .pay div {
         display: flex;
         justify-content: center;
+    }
+    .footer .logo {
+        padding: 24px;
     }
 }
 
