--- a/assets/present.css
+++ b/assets/present.css
@@ -4,10 +4,11 @@
 .title-list ul li {
     line-height: 40px;
 }
+.present .title h6, .present .title p {
+    text-indent: 40px;
+}
 .cart-page {
     /* background-image: url(./image/slide1.png); */
-    /* opacity: 0.8; */
-    /* height: 100px; */
 }
 @media screen and (max-width: 576px) {
     .title-list ul li {
