--- a/assets/main.css
+++ b/assets/main.css
@@ -678,7 +678,7 @@ button.nav-item {
 }
 .modal {
   /* --bs-modal-border-color: var(--bs-border-color-translucent); */
-  border: none !important;
+  /* border: none !important; */
 }
 
 .tab-content .container {
