--- a/assets/product.css
+++ b/assets/product.css
@@ -25,6 +25,7 @@
 .select-price input {
     outline: none;
     width: 30%;
+    text-align: center;
 }
 .tab-pro ul li {
     margin-right: 12px;
@@ -118,7 +119,16 @@
     .tabfilter .select-price input {
         width: 70%;
         margin: auto;
-        text-align: end;
+    }
+    .pro-title {
+        font-size: 14px !important;
+    }
+    .pro-price {
+        font-size: 16px !important;
+    }
+    .add-cart button {
+        font-size: 14px !important;
+        padding: 0px 6px !important;
     }
 }
 @media screen and (max-width:768px) {
@@ -149,8 +159,20 @@
         margin-right: 4px;
         /* display: inline-block; */
     }
-    .list-page i {
+    /* .list-page i {
         font-size: 12px;
+    } */
+    .select-filter div {
+        font-size: 13px;
+    }
+    .select-price input {
+        font-size: 12px;
+    }
+    #product-list .add-cart button {
+        border-radius: 3px;
+    }
+    #product-list .pro-rating i, #product-list .rating-num {
+        font-size: 12px !important;
     }
 
 }
@@ -159,6 +181,34 @@
         width: 125%;
     }
     .select-filter {
-        padding-left: 4px;
+        /* padding-left: 4px; */
+    }
+    .tabfilter h6 {
+        font-size: 10px;
+    }
+    .add-cart button {
+        font-size: 12px !important;
+        padding: 0px 8px !important;
+        /* margin: 0; */
+    }
+    #product-list .pro-price {
+        margin: 0;
+    }
+    #product-list .pro-title {
+        margin: 6px 0;
+    }
+    #product-list .pro-rating i, #product-list .rating-num {
+        font-size: 10px !important;
+    }
+}
+@media screen and (max-width: 467px) {
+    #product-list .pro-title {
+        margin: 6px 0;
+    }
+    #product-list .add-cart button {
+        padding: 2px 4px !important;
+        line-height: 24px;
+        font-size: 10px !important;
+        font-weight: 500;
     }
 }
