--- a/assets/main.css
+++ b/assets/main.css
@@ -16,16 +16,17 @@ body {
   box-shadow: 0 23px 38px 0 rgb(0 0 0 / 20%);
 }
 .success-message {
-  position: fixed;
-  top: 60px;
-  right: 10px;
-  background-color: green;
+  background-color: #4CAF50;
   color: white;
+  font-weight: 600;
   padding: 10px;
   border-radius: 5px;
-  z-index: 2000;
+  position: fixed;
+  top: 100px;
+  right: 10px;
+  box-shadow: 0 30px 90px 0 rgb(0 0 0 / 60%);
+  z-index: 9999;
 }
-
 a {
   text-decoration: none;
 }
@@ -188,6 +189,9 @@ a {
   font-size: 18px;
   padding: 8px;
   border: 0;
+}
+textarea:focus{
+  outline: 1px solid #f19e30;
 }
 
                         /* MENU */
