--- a/assets/cart.css
+++ b/assets/cart.css
@@ -71,19 +71,30 @@ tfoot {
     border: none;
     border-radius: 4px;
     padding: 6px 10px;
-    font-size: 18px;
-    font-weight: 700;
-    width: 20%;
+    font-size: 16px;
+    font-weight: 600;
+    /* width: 20%; */
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     display: inline;
 }
+.pay-cart:hover {
+  background-color: rgb(21, 92, 247);
+}
 .pay-cart a {
     color: #fff;
     margin: 0 auto;
+}
 
+.backbtn {
+  border: none;
+  font-weight: 600;
+  border-radius: 4px;
+}
+.backbtn:hover {
+  background-color: #28a421 !important;
 }
 .product-thumbnail {
   margin: 10px auto;
@@ -105,12 +116,25 @@ tfoot {
 .cart-item-actions {
   padding: 0 10px;
 }
-/* .all {
-  position: absolute;
+.shopping-cart-empty {
+  margin: 0 auto;
 }
-td .total-price {
-  position: relative;
-} */
+.pay h5 {
+  margin: 0 !important;
+}
+.pay {
+  margin-top: 30px;
+  padding: 12px 28px;
+  border-radius: 5px;
+}
+.totalpay h5 {
+  margin-right: 30px !important;
+  padding-top: 2px;
+}
+.pay-cart {
+  margin-top: 16px;
+  margin: 16px auto !important;
+}
 
 
 @media screen and (max-width:1200px) {
@@ -161,7 +185,27 @@ td .total-price {
   }
   .pay button {
     margin: 20px auto;
+    font-size: 16px;
   }
+  .totalpay h5 {
+    margin-right: 12px !important;
+    font-size: 16px;
+  }
+  .total-price {
+    font-size: 16px !important;
+  }
+  .pay {
+    margin-top: 30px;
+    padding: 8px 18px;
+    border-radius: 5px;
+  }
+.backbtn {
+  font-weight: 500;
+  font-size: 14px;
+}
+.pay-cart a {
+  font-size: 12px;
+}
 }
 @media screen and (max-width: 576px) {
   .name-page {
@@ -186,5 +230,13 @@ td .total-price {
   }
   .product-quantity .quantity {
     padding: 0 8px;
+  }
+  div.back {
+    margin-top: 22px !important;
+  }
+  .backbtn {
+    font-weight: 400;
+    font-size: 12px;
+    padding: 3px 6px !important;
   }
 }
